          prevent pointer vs int size warnings on 64-bit builds of perl.
        - add our own INT2PTR and PTR2IV definitions when perl doesn't
          supply them
        - difference() method
        - hide (with static) or rename many symbols that could possibly
          cause conflicts with other libraries or perl
        - Fix runaway cache problem for freetype1 font cache.
        - Added version logging when log is started.

0.40
        - difference() wasn't setting an alpha channel when the input
          image didn't have one
        - improve crop() documentation, see
          http://perlmonks.org/index.pl?lastnode_id=155767&node_id=155428
        - handle the first "buggy giflib" test more portably.  Previously
          it used fork() which caused problems on systems that didn't have
          a real fork().

0.41
        - skip() in testtools should be skipn() and it should use the 
          loop variable for the test number

0.42pre1
        - quote the 'min' parameter to scale in Imager::Transformations
          and at least mention it in the docs beyond the examples
        - document the values for the read() and write() method type 
          parameter
        - support UTF8 text with Freetype 1.x 
        - second parameter to SvPV() must be of type STRLEN
        - Doc pathces from cogent.
        - Fixed out of bounds access on bitmap for flood fills.
        - some char * vs unsigned char * casts missing on OSF1 v4.0
        - some enums had , on the last item in datatypes.h, which OSF1
          didn't like
	- Compaq C 6.4 (OSF1) claims to be C99 but doesn't provide 
          stdint.h, don't try to use it under OSF
        - fix missing initialization in tags.c

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
