@@ -1250,13 +1250,14 @@ i_img_getdata(im)
 
 
 void
-i_draw(im,x1,y1,x2,y2,val)
+i_line(im,x1,y1,x2,y2,val,endp)
     Imager::ImgRaw     im
 	       int     x1
 	       int     y1
 	       int     x2
 	       int     y2
      Imager::Color     val
+	       int     endp
 
 void
 i_line_aa(im,x1,y1,x2,y2,val)
